--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -2,9 +2,7 @@ header {
   background-color: white;
 }
 
-main {
-  padding: 35px 0;
-}
+
 
 .ruta-cruz {
   display: flex;
@@ -12,6 +10,7 @@ main {
   align-items: center;
   margin: 0 auto;
   flex-direction: row-reverse;
+  margin: 0px 30px;
 }
 
 .ruta-producto {
@@ -32,26 +31,12 @@ main {
   color:  rgb(129, 22, 129);
 }
 
-.carrusel {
-  width: 60vw;
-  height: 60vw;
-  max-width: 600px;
-  max-height: 600px;
-  margin: 0 auto 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background: white;
-  border: solid 1px lightgray;
-}
+
 
 .imagenes-producto {
   height: 100%;
 }
 
-.contenedor-imagen-carrusel {
-  height: 75%;
-}
 
 .contenedor-minis {
   display: flex;
@@ -90,9 +75,138 @@ main {
   font-size: 16px;
 }
 
-.details {
-  margin: 15px 0 0 0;
+.box-detail-row{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid #80083F;
+  padding-bottom: 45px;
+  margin: 0px 30px;
 }
+
+
+
+
+
+
+
+
+.size-detail {
+  margin: 15px 0 0 0;
+  color: #666;
+}
+
+.contenedor-imagen-producto img{
+  display: flex;
+    justify-content: center;
+    height: 17em;
+    width: 17em;
+    border-radius: 20px;
+}
+.recomendations-row{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 15px;
+}
+.box-product {
+  box-shadow: none;
+  border-radius: 1em;
+  display: flex;
+  background-color: white;
+  margin: 10px
+}
+.box-product .div-producto:hover {
+  box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  transition: all 300ms ease-in-out;
+}
+.div-producto{
+  border: solid 1px lightgray;
+  max-width: 650px;
+  margin: 0 auto;
+  border-radius: 1em;
+}
+
+.box-details{
+  border-top: solid 1px lightgray;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  padding: 15px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.etiqueta-link {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  background-color: transparent;
+}
+
+.box-size-wine{
+  color: black;
+
+}
+.box-size-wine p{
+  margin-bottom: 10px;
+
+}
+.box-product-name{
+  color: black;
+}
+.box-discount{
+  color: #80083F
+}
+
+.bodega-detail {
+  font-weight: 300;
+  font-size: 20px;
+  color: #80083F;
+}
+.category-detail {
+  
+  font-weight: 300;
+  color: #80083F;
+  font-size: 20px;
+}
+.imagen-principal{
+  object-fit: contain;
+  width: 400px;
+  height: 400px;
+}
+.imagenes-producto{
+    width: 100%;
+    height: 82%;
+    margin-top: 1em;
+}
+.box-price {
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.tachar-precio {
+  text-decoration: line-through 1px purple;
+  font-weight: 300;
+  color: #666;
+}
+.recomendaciones {
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  justify-content: flex-start;
+  font-size: 45px;
+  font-weight: 300;
+  padding: 15px 30px;
+  color: #666;
+  flex-direction: row;
+}
+
+
+
+
+
 
 .nombre-producto {
   font-size: 25px;
@@ -282,16 +396,17 @@ main {
   align-items: center;
   border-top: solid 1px lightgray;
 }
+.descripcion-producto{
+  font-weight: 300;
+    color: #666;
+}
 
 .detalles-articulo-rel {
   font-size: 16px;
 }
 
 @media screen and (min-width: 769px) {
-  main {
-    margin-top: 8%;
-    width: 90%;
-  }
+ 
 
   .articulo-1 {
     width: 25%;
@@ -308,11 +423,22 @@ main {
     align-items: center;
     border: solid 1px lightgray;
   }
-  .carrusel{
+  .imeage-product-detail {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: solid 1px lightgray;
     width: auto;
     height: 38vw;
     margin: 10px 41px;
   }
+  .contenedor-detalles {
+    display: flex;
+    flex-direction: column;
+    max-width: 780px;
+    padding: 10px 10px;
+  }
+ 
 }
 
 @media screen and (min-width: 1000px) {
@@ -320,17 +446,9 @@ main {
     display: flex;
   }
 
-  .carrusel-minis {
-    display: flex;
-    flex-direction: column;
-  }
+ 
 
-  .contenedor-detalles {
-    padding: 0px 40px;
-    display: flex;
-    flex-direction: column;
-    margin: 0px 38px;
-  }
+  
 
   .cantidad-agregar {
     padding: 0;
