--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -268,6 +268,7 @@ header {
   color: white;
 }
 
+
 .boton-agregar {
   height: 100%;
   width: 100%;
@@ -403,6 +404,23 @@ header {
 
 .detalles-articulo-rel {
   font-size: 16px;
+}
+.admin-button{
+  display: flex;
+    margin: auto;
+    color: white;
+    padding: 8px 0px;
+    border-radius: 10px;
+    font-size: 16px;
+    margin: 15px;
+    background-color: #80083F;
+    text-decoration: none;
+    width: 157px;
+    justify-content: center;
+}
+.admin-button:hover {
+  background-color: rgb(129, 22, 129);
+  color: white;
 }
 
 @media screen and (min-width: 769px) {
