--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
         <ul class="functions-header">
             <a href="/products"><li>Productos</li></a>
             <a href="/bodegas"><li>Bodegas</li></a>
-            <a href="/provincias"><li>Provincias</li></a>
+            <a href="/products/provincias"><li>Provincias</li></a>
             <a href="/products/carrito"><li>Carrito</li></a>
             <% if(locals.isLogged.category_id == 1) { %>
             <a href="/products/crear"><li>Crear</li></a>
