armando el boton de cantidad en la vista detalles

--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -451,7 +451,7 @@ header {
   .contenedor-detalles {
     display: flex;
     flex-direction: column;
-    max-width: 780px;
+    width: 560px;
     padding: 10px 10px;
   }
  
