mejorando validaciones de front end de productos

--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -4,7 +4,7 @@
   <head>
     <%- include("../partials/head.ejs") %>
     <link rel="stylesheet" href="/css/detalles.css" />
-    <script src="/js/detalles-validations.js"></script>
+    
   </head>
 
   <body>
@@ -127,5 +127,6 @@
 
     </main>
     <%- include("../partials/footer.ejs") %>
+    <script src="/js/detalles-validation.js"></script>
   </body>
 </html>
